--- a/app/src/main/res/layout/fragment_movie_detail.xml
+++ b/app/src/main/res/layout/fragment_movie_detail.xml
@@ -18,7 +18,8 @@
             android:background="@color/colorBackground"
             android:elevation="5dp"
             android:gravity="center_vertical"
-            android:paddingLeft="@dimen/titleLeftPadding"
+            android:paddingStart="@dimen/titleLeftPadding"
+            android:paddingEnd="@dimen/titleRightPadding"
             android:textAppearance="@style/TextAppearance.AppCompat.Display1"
             android:textColor="@color/white"
             app:layout_constraintStart_toStartOf="parent"
@@ -31,6 +32,7 @@
             android:layout_height="225dp"
             android:layout_marginStart="16dp"
             android:layout_marginTop="8dp"
+            android:contentDescription="@string/image_content_description"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/movie_detail_title" />
 
@@ -61,7 +63,6 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="24dp"
             android:layout_marginTop="24dp"
-            android:text="Release Date"
             android:textAppearance="@style/TextAppearance.AppCompat.Large"
             android:textColor="@android:color/darker_gray"
             app:layout_constraintStart_toEndOf="@+id/movie_detail_thumbnail"
