--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -3,11 +3,13 @@
     <array name="sort_order_options_label">
         <item>@string/sort_by_popularity_label</item>
         <item>@string/sort_by_rating_label</item>
+        <item>@string/sort_by_favorites_label</item>
     </array>
 
     <array name="sort_order_options_values">
         <item>@string/sort_by_popularity_value</item>
         <item>@string/sort_by_rating_value</item>
+        <item>@string/sort_by_favorites_value</item>
     </array>
 
 </resources>
