--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -3,7 +3,7 @@
     android:orientation="horizontal"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-    <fragment android:name="com.reshmi.james.popularmovies.PopularMoviesFragment"
+    <fragment android:name="com.reshmi.james.popularmovies.ui.popmovies.PopularMoviesFragment"
         android:id="@+id/pop_movies_fragment_container"
         android:layout_weight="1"
         android:layout_width="0dp"
