--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<fragment android:name="com.reshmi.james.popularmovies.PopularMoviesFragment"
+<fragment android:name="com.reshmi.james.popularmovies.ui.popmovies.PopularMoviesFragment"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:id="@+id/pop_movies_fragment_container"
-    tools:context="com.reshmi.james.popularmovies.MainActivity"
+    tools:context="com.reshmi.james.popularmovies.ui.popmovies.PopularMoviesActivity"
     tools:ignore="MergeRootFrame">
 
 </fragment>
