--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
     <fragment android:name="com.reshmi.james.popularmovies.ui.popmovies.PopularMoviesFragment"
-        android:id="@+id/pop_movies_fragment_container"
+        android:id="@+id/pop_movies_fragment"
         android:layout_weight="1"
         android:layout_width="0dp"
         android:layout_height="match_parent" />
