--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:id="@+id/pop_movies_fragment_container"
+    android:id="@+id/pop_movies_fragment"
     tools:context="com.reshmi.james.popularmovies.ui.popmovies.PopularMoviesActivity"
     tools:ignore="MergeRootFrame">
 
