--- a/app/src/main/res/layout/trailer_list_item.xml
+++ b/app/src/main/res/layout/trailer_list_item.xml
@@ -1,42 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="75dp"
-    android:orientation="vertical">
+    >
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
-        android:orientation="horizontal">
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerVertical="true"
+        android:scaleType="centerCrop"
+        android:src="@android:drawable/ic_media_play"
+        android:tint="@color/colorPrimaryDark"
+        android:contentDescription="@string/play_trailer_button" />
 
-        <ImageView
-            android:id="@+id/imageView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:contentDescription="@android:string/VideoView_error_button"
-            android:layout_gravity="center_vertical"
-            android:scaleType="matrix"
-            android:src="@android:drawable/ic_media_play"
-            android:tint="@color/colorPrimaryDark" />
-
-        <TextView
-            android:id="@+id/trailer_name"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:layout_margin="8dp"
-            android:gravity="center_vertical"
-            tools:text="Testing " />
-
-    </LinearLayout>
+    <TextView
+        android:id="@+id/trailer_name"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_toEndOf="@+id/imageView"
+        android:layout_centerVertical="true"
+        tools:text="Testing" />
 
     <View
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:background="@color/colorPrimaryDark" />
-
-
-</LinearLayout>
+        android:background="@color/colorPrimaryDark"
+        android:layout_alignParentBottom="true"/>
+</RelativeLayout>
